# DebugDrivePlayback

./: .env  .env.docker  .env.example  .gitignore  .replit  BACKEND_SETUP.md  CLAUDE.md  DATA_INTEGRITY_SUMMARY.md  DOCKER_SETUP_SIMPLE.md  Dockerfile  Dockerfile.dev  Dockerfile.python  LOCAL_SETUP.md  MANUAL_SETUP_STREAMLINED.md  QUICK_START.md  README.md  SETUP_OPTIONS.md  TESTING_INSTRUCTIONS.md  TESTING_STRATEGY.md  TESTING_SUMMARY.md  TEST_RUNNER_GUIDE.md  TRIP_DATA_SETUP.md  V1_TESTING_QUICK_CHECKLIST.md  WIDGET_WIZARD_DOCUMENTATION.md  babel.config.cjs  cleanup-obsolete.sh  cleanup-test-artifacts.sh  cleanup.sh  codebase-visualization-enhanced.html  codebase-visualization.html  docker-compose-dev.yml  docker-compose-postgres-only.yml  docker-compose-prod.yml  docker-compose.yml  env.example  fix-dependencies.sh  fix-docker.sh  init-db.sql  jest.config.cjs  jest.config.js  (+29 more)
.claude/: settings.local.json  settings.local.json.template
.github/: README.md  validate-workflows.sh
.storybook/: main.ts  preview.tsx  test-runner.ts
TO_BE_DELETED/: CONTINUATION_GUIDE.md  DATA_INTEGRITY_SUMMARY.md  DOCKER_SETUP_SIMPLE.md  MANUAL_SETUP_STREAMLINED.md  README_CLEANUP_SUMMARY.md  SETUP_OPTIONS.md  TESTING_INSTRUCTIONS.md  TESTING_ROADMAP.md  TE_testing_usecases.md  V1.5_TEST_GUIDE.md
attached_assets/: FRD_Debug_Player_1752265391190.md  PRD_Debug_Player_1752265391190.md  Pasted--sha256-06772a4eff3df697497bb68b4dcdeb97fdb9338b5e7dde7d1a53579c3203c9ba-54-76MB-54-76MB--1753015582422_1753015582422.txt  Plugin_Interface_Mapping.md  Plugin_Interface_Mapping_1752267994324.md  (+8 more)
(+301 files in other folders)
